# snewpy

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  LICENSE  README.Sqa3Earth.md  README.md  nose2.cfg  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.Sqa3Earth.Linux.py  setup.py  snowglobes_models.ipynb
Fornax_2019/: Fornax_ASCII_Reader.ipynb  README.md
Janka/: 18.6_LS220_1D_solar_mass_progenitor.fits  27_Shen_1D_solar_mass_progenitor.fits
Nakazato_2013/: README.md  nakazato-shen-BH-z0.004-s30.0.fits  nakazato-shen-z0.004-t_rev100ms-s13.0.fits  nakazato-shen-z0.004-t_rev200ms-s20.0.fits  nakazato-shen-z0.004-t_rev200ms-s50.0.fits  nakazato-shen-z0.004-t_rev300ms-s50.0.fits  nakazato-shen-z0.02-t_rev100ms-s13.0.fits  nakazato-shen-z0.02-t_rev100ms-s30.0.fits  nakazato-shen-z0.02-t_rev100ms-s50.0.fits  nakazato-shen-z0.02-t_rev200ms-s50.0.fits  nakazato-shen-z0.02-t_rev300ms-s13.0.fits  nakazato-shen-z0.02-t_rev300ms-s30.0.fits
OConnor_2013/: README.md  oconnor_HShen_s100.fits  oconnor_HShen_s12.fits  oconnor_HShen_s120.fits  oconnor_HShen_s13.fits  oconnor_HShen_s14.fits  oconnor_HShen_s15.fits  oconnor_HShen_s16.fits  oconnor_HShen_s17.fits  oconnor_HShen_s18.fits  oconnor_HShen_s19.fits  oconnor_HShen_s20.fits  oconnor_HShen_s21.fits  oconnor_HShen_s22.fits  oconnor_HShen_s23.fits  oconnor_HShen_s24.fits  oconnor_HShen_s25.fits  oconnor_HShen_s26.fits  oconnor_HShen_s27.fits  oconnor_HShen_s28.fits  oconnor_HShen_s29.fits  oconnor_HShen_s30.fits  oconnor_HShen_s31.fits  oconnor_HShen_s32.fits  oconnor_HShen_s33.fits  (+41 more)
(+1628 files in other folders)
